rest/rest-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: rest
spec:
  selector:
    matchLabels:
      app: rest
  replicas: 1
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest
        image: mukundkalantri23/mysql-rest:latest
        ports:
        - containerPort: 5002
