rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-svc
spec:
  type: NodePort
  selector:
    app: rest
  ports:
    - name : rest
      protocol: "TCP"
      port: 8080
      targetPort: 5002
